--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
     paths:
       - 'dbt_project/**'
+  push:
+    branches: [main]
+    paths:
+      - 'dbt_project/**'
 
 jobs:
   detect-changes:
@@ -47,7 +51,7 @@ jobs:
           fi
 
       - name: Save current state
-        if: github.ref == 'refs/heads/main'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v4
         with:
           name: dbt-manifest
