--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -26,12 +26,13 @@ jobs:
 
       - run: pip install -r requirements.txt
 
-      - name: Download previous state
-        uses: dawidd6/action-download-artifact@v2
+      - name: Restore previous state
+        uses: actions/cache/restore@v3
         with:
-          workflow: dbt_ci.yml
-          name: dbt-manifest
-          path: ./state
+          path: ./state/manifest.json
+          key: dbt-manifest-${{ github.sha }}
+          restore-keys: |
+            dbt-manifest-
         continue-on-error: true
 
       - name: Generate manifest
@@ -51,8 +52,8 @@ jobs:
           fi
 
       - name: Save current state
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v4
+        if: github.ref == 'refs/heads/main'
+        uses: actions/cache/save@v3
         with:
-          name: dbt-manifest
           path: dbt_project/ominimo_transform/target/manifest.json
+          key: dbt-manifest-${{ github.sha }}
