--- a/.github/workflows/dbt_cicd.yml
+++ b/.github/workflows/dbt_cicd.yml
@@ -10,8 +10,11 @@ on:
     paths:
       - 'dbt_project/**'
 
+permissions:
+  contents: write
+
 jobs:
-  detect-changes:
+  dbt-state-comparison:
     runs-on: ubuntu-latest
     
     env:
@@ -28,14 +31,12 @@ jobs:
 
       - run: pip install -r requirements.txt
 
-      - name: Download previous state from main
+      - name: Fetch manifest from main branch
         run: |
-          git fetch origin main
-          git checkout origin/main -- dbt_project/ominimo_transform/target/manifest.json 2>/dev/null || true
           mkdir -p ./state
-          mv dbt_project/ominimo_transform/target/manifest.json ./state/ 2>/dev/null || echo "No previous manifest found"
+          git show origin/main:dbt_project/ominimo_transform/target/manifest.json > ./state/manifest.json 2>/dev/null || echo "No previous manifest"
 
-      - name: Generate manifest
+      - name: Generate current manifest
         run: |
           cd dbt_project/ominimo_transform
           dbt parse --profiles-dir ../..
@@ -44,19 +45,18 @@ jobs:
         run: |
           cd dbt_project/ominimo_transform
           if [ -f ../../state/manifest.json ]; then
-            echo "Only these models would run:"
+            echo "Modified models and downstream dependencies:"
             dbt list --select state:modified+ --state ../../state --profiles-dir ../..
           else
-            echo "First run - all models would execute"
+            echo "First run - all models would execute:"
             dbt list --profiles-dir ../..
           fi
 
-      - name: Commit manifest to main
+      - name: Commit manifest to repository
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          mkdir -p dbt_project/ominimo_transform/target
-          git add dbt_project/ominimo_transform/target/manifest.json -f
-          git commit -m "Update dbt manifest [skip ci]" || echo "No changes to manifest"
-          git push origin main
+          git add -f dbt_project/ominimo_transform/target/manifest.json
+          git commit -m "Update dbt manifest [skip ci]" || echo "No manifest changes"
+          git push
